# rust_rv32i_os

./: .gitignore  Cargo.toml  README.md  configuration.py  configure.py  linker.ld  make.sh  run.sh
.cargo/: config.toml
blog/: README.md
emulator/src/: main_config.hpp  rv32i.hpp
lib/: Cargo.toml
lib/src/: constants.rs  fixed_size_list.rs  gen_list.rs  lib.rs  lib_unsafe.rs
notes/: README.md  copy-emulator-from-source.sh  firmware-build.sh  firmware-size-and-changed-log.txt  firmware-size-log.txt
notes/archived/: u8_slice_tokenizer.rs
qa/: test.diff  test.in
qa/emulate/: test.diff  test.in  test.sh
qa/emulator/: test.sh
qa/fpga/: test.diff  test.sh
scripts/: build-firmware.sh  emulate.sh  emulator-copy-from-source.sh  firmware-build-and-flash-20k.sh  firmware-build-and-flash-9k.sh  firmware-build.sh  firmware-objdump.sh  flash-os-and-program-fpga.sh  fpga-flash-os-and-program.sh  make-and-flash-os.sh  project-commit-and-push.sh  project-tag-and-push.sh  qa-extract-commands-from-diff.py  restore-source-to-head.sh
src/: actions.rs  constants.rs  main.rs  model.rs  startup.s
src/lib/: api.rs  api_unsafe.rs  bump_allocator.rs  command_buffer.rs  constants.rs  cursor_buffer.rs  fixed_size_list.rs  fixed_size_string.rs  gen_list.rs  global_allocator.rs
