[package]
name = "os"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "firmware"
path = "src/main.rs"

[profile.dev]
panic = "abort"
debug = true

[profile.release]
panic = "abort"
opt-level = "z" # optimize for size
debug = true    # include debugging symbols

[dependencies]
# No dependencies!

[features]
# No default features
